fix welcome page gaps

--- a/src/Pages/Welcome/components/MainCover/styles.module.scss
+++ b/src/Pages/Welcome/components/MainCover/styles.module.scss
@@ -14,9 +14,13 @@
 }
 .wcover--logo-graph-container {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
 }
 .wcover--logo {
   height: 100px;
+  width: 170px;
   margin-left: 10px;
 }
 .wcover--heading-text {
@@ -30,6 +34,9 @@
 }
 .wcover--graph-heading-inner-container {
   padding-left: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
 }
 .wcover--button-container {
   display: flex;
@@ -224,6 +231,9 @@
   .wcover--bottom-rectangles-vertical-2 {
     top: 270px;
     right: 10px;
+  }
+  .wcover--logo-graph-container {
+    gap: 20px;
   }
 }
 @media (max-width: 930px) {
